[gd_scene load_steps=8 format=3 uid="uid://dqhoswkygilog"]

[ext_resource type="Script" path="res://studio/ui/combo/slider_value.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bjjupcv4j7tte" path="res://addons/nsound/assets/icons/godot/Play.svg" id="2"]
[ext_resource type="Script" path="res://studio/ui/quick_button.gd" id="3"]
[ext_resource type="Script" path="res://studio/studio.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://dxgrbimctxxhm" path="res://studio/ui/combo/slider_value.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://8tyumwgxsf1c" path="res://studio/ui/combo/label_value.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://on5bwv7fgr3y" path="res://studio/mixer/mixer.tscn" id="7"]

[node name="Studio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="Controls" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Unload" type="Button" parent="Controls"]
layout_mode = 0
offset_left = 30.0
offset_top = 72.0
offset_right = 121.0
offset_bottom = 92.0
text = "Unload song"

[node name="Sliders" type="GridContainer" parent="Controls"]
layout_mode = 0
offset_left = 292.732
offset_top = 161.252
offset_right = 971.732
offset_bottom = 266.252
theme_override_constants/h_separation = 64
theme_override_constants/v_separation = 32
columns = 2

[node name="Level" parent="Controls/Sliders" instance=ExtResource("5")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
max_value = 0.0

[node name="HookValue" parent="Controls/Sliders" instance=ExtResource("5")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Timeline" parent="Controls/Sliders" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
components = 1

[node name="Time" type="Label" parent="Controls/Sliders/Timeline"]
layout_mode = 2
text = "0.0s"

[node name="Separator" type="Label" parent="Controls/Sliders/Timeline"]
layout_mode = 2
text = "/"

[node name="TotalTime" type="Label" parent="Controls/Sliders/Timeline"]
layout_mode = 2
text = "0.0s"

[node name="Timeline0ld" type="HBoxContainer" parent="Controls/Sliders"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1")
components = 1

[node name="Label" type="Label" parent="Controls/Sliders/Timeline0ld"]
layout_mode = 2
text = "Timeline"

[node name="HSlider" type="HSlider" parent="Controls/Sliders/Timeline0ld"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0

[node name="Value" type="Label" parent="Controls/Sliders/Timeline0ld"]
visible = false
layout_mode = 2
text = "Timeline"

[node name="SpinBox" type="SpinBox" parent="Controls/Sliders/Timeline0ld"]
visible = false
layout_mode = 2
max_value = 10.0

[node name="BBT" parent="Controls/Sliders" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2
value = "1.1"
total = "8.4"
editable = true

[node name="Run" type="GridContainer" parent="Controls"]
layout_mode = 0
offset_left = 1022.94
offset_top = 40.3354
offset_right = 1243.94
offset_bottom = 224.335
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32

[node name="Transitions" type="HBoxContainer" parent="Controls/Run"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Controls/Run/Transitions"]
layout_mode = 2
text = "Run transition:"

[node name="RunTransition" type="Button" parent="Controls/Run/Transitions"]
layout_mode = 2
icon = ExtResource("2")

[node name="Transitions" type="OptionButton" parent="Controls/Run/Transitions"]
unique_name_in_owner = true
layout_mode = 2

[node name="Section" type="HBoxContainer" parent="Controls/Run"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Controls/Run/Section"]
layout_mode = 2
text = "Goto section:"

[node name="GotoSection" type="Button" parent="Controls/Run/Section"]
layout_mode = 2
icon = ExtResource("2")

[node name="Sections" type="OptionButton" parent="Controls/Run/Section"]
unique_name_in_owner = true
layout_mode = 2

[node name="Stingers" type="HBoxContainer" parent="Controls/Run"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Controls/Run/Stingers"]
layout_mode = 2
text = "Play stinger:"

[node name="RunStinger" type="Button" parent="Controls/Run/Stingers"]
layout_mode = 2
icon = ExtResource("2")

[node name="Stingers" type="OptionButton" parent="Controls/Run/Stingers"]
unique_name_in_owner = true
layout_mode = 2

[node name="Transport" type="HBoxContainer" parent="Controls"]
layout_mode = 0
offset_left = 161.915
offset_top = 90.4819
offset_right = 344.915
offset_bottom = 110.482
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="Controls/Transport"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Play"
script = ExtResource("3")

[node name="Stop" type="Button" parent="Controls/Transport"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Stop"
script = ExtResource("3")

[node name="NextLoop" type="Button" parent="Controls/Transport"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "NextLoop"
script = ExtResource("3")

[node name="Point" type="VBoxContainer" parent="Controls"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -574.639
offset_top = 166.677
offset_right = -510.639
offset_bottom = 234.677

[node name="Bar" parent="Controls/Point" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2
separator = ":"

[node name="Beat" parent="Controls/Point" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2
separator = ":"

[node name="LoopBeat" parent="Controls/Point" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2
separator = ":"

[node name="Loop" parent="Controls/Point" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2
separator = ":"

[node name="Songs" type="HBoxContainer" parent="Controls"]
layout_mode = 0
offset_left = 28.9999
offset_top = 25.0
offset_right = 274.0
offset_bottom = 47.0
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Controls/Songs"]
layout_mode = 2
text = "Goto song:"

[node name="GotoSong" type="Button" parent="Controls/Songs"]
layout_mode = 2
icon = ExtResource("2")

[node name="Songs" type="OptionButton" parent="Controls/Songs"]
unique_name_in_owner = true
layout_mode = 2

[node name="Song" type="VBoxContainer" parent="Controls"]
layout_mode = 0
offset_left = 407.126
offset_top = 29.3665
offset_right = 465.126
offset_bottom = 125.366
theme_override_constants/separation = 16

[node name="SongTitle" type="Label" parent="Controls/Song"]
unique_name_in_owner = true
layout_mode = 2
text = "SongTitle"

[node name="SongParams" type="VBoxContainer" parent="Controls/Song"]
layout_mode = 2

[node name="BPM" parent="Controls/Song/SongParams" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2

[node name="BPB" parent="Controls/Song/SongParams" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Bars" parent="Controls/Song/SongParams" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -15.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Mixer" parent="MarginContainer" instance=ExtResource("7")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="Controls/Unload" to="." method="_on_Unload_pressed"]
[connection signal="value_changed" from="Controls/Sliders/Level" to="." method="_on_Level_value_changed"]
[connection signal="value_changed" from="Controls/Sliders/HookValue" to="." method="_on_HookValue_value_changed"]
[connection signal="value_changed" from="Controls/Sliders/Timeline" to="." method="_on_timeline_value_changed"]
[connection signal="value_changed" from="Controls/Sliders/Timeline0ld" to="." method="_on_Timeline_value_changed"]
[connection signal="drag_ended" from="Controls/Sliders/Timeline0ld/HSlider" to="Controls/Sliders/Timeline0ld" method="_on_HSlider_drag_ended"]
[connection signal="drag_started" from="Controls/Sliders/Timeline0ld/HSlider" to="Controls/Sliders/Timeline0ld" method="_on_HSlider_drag_started"]
[connection signal="value_changed" from="Controls/Sliders/Timeline0ld/HSlider" to="Controls/Sliders/Timeline0ld" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Controls/Sliders/BBT" to="." method="_on_BBT_value_changed"]
[connection signal="pressed" from="Controls/Run/Transitions/RunTransition" to="." method="_on_RunTransition_pressed"]
[connection signal="pressed" from="Controls/Run/Section/GotoSection" to="." method="_on_GotoSection_pressed"]
[connection signal="pressed" from="Controls/Run/Stingers/RunStinger" to="." method="_on_RunStinger_pressed"]
[connection signal="pressed" from="Controls/Transport/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Controls/Transport/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Controls/Transport/NextLoop" to="." method="_on_NextLoop_pressed"]
[connection signal="pressed" from="Controls/Songs/GotoSong" to="." method="_on_GotoSong_pressed"]
